--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "generate": "stencil generate"
   },
   "devDependencies": {
-    "@stencil/core": "^1.12.2",
-    "@stencil/sass": "1.3.1"
+    "@stencil/core": "^1.12.2"
   },
   "license": "MIT"
 }
