--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css3pattern",
+  "name": "@jwillmer/pattern-component",
   "version": "0.0.1",
   "description": "CSS Pattern Component",
   "homepage": "https://github.com/jwillmer/pattern-component",
